feat: add seo utils

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -1,6 +1,9 @@
 import Avatar from '../components/avatar'
+import SEO from '../components/seo'
 import styled from '@emotion/react'
 import { css } from '@emotion/react'
+
+<SEO title="Resume" />
 
 <article>
 
