refact: small layout & content changes

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -24,7 +24,7 @@ I am actually working in [Pepperbay](https://www.pepperbay.fr/), a web developme
 
 ## Professional experience
 
-**Pepperbay - Web Developer**: 2019 - ...
+**Pepperbay - Web Developer**: 2019 - 2021
 
 In charge of redesigning the interface of an international trading application.  
 Choice of technologies (libraries & frameworks).
@@ -35,7 +35,7 @@ Technical Stack:
 - State management: [Redux](https://redux.js.org/)
 - Effects management: [Redux-Saga](https://redux-saga.js.org/)
 - Graphic components management: [Storybook](https://storybook.js.org/)
-- Internationalization management: [i18next](https://www.i18next.com/)
+- Internationalization management: ~~[i18next](https://www.i18next.com/)~~ Lighter custom solution
 - Others: [Webpack](https://webpack.js.org/), [Ramda](https://ramdajs.com/), [Husky](https://github.com/typicode/husky), [ESLint](https://eslint.org/), [Prettier](https://prettier.io/)
 
 **Pepperbay - Work-Study Program**: 2018 - 2019
@@ -56,7 +56,7 @@ The challenge of the project is its complete redesign, but without interruption 
 ## School course
 
 **[EPSI](http://www.epsi.fr/) - Master of Science in Computer Engineering**: 2017 - 2019  
-Training leading to a level I RNCP qualification (Bac+5) "Expert in Computer Science and Information Systems", and carried out in an apprenticeship in the [Fleury Michon](https://www.fleurymichon.fr/) company and [Pepperbay](https://www.pepperbay.fr/).
+Training leading to a level 1 RNCP qualification (Bac+5) "Expert in Computer Science and Information Systems", and carried out in an apprenticeship in the [Fleury Michon](https://www.fleurymichon.fr/) company and [Pepperbay](https://www.pepperbay.fr/).
 
 **[IIA Laval](http://iia-laval.fr/) - Bachelor of Science in Computer Science**: 2016 - 2017  
 Training in partnership with the CNAM, carried out under a professionalization contract with [Fleury Michon](https://www.fleurymichon.fr/).
