fix: bad english wording

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -20,7 +20,7 @@ I am 25 years old and I am passionate about computing in the broad sense:
 dev, web technos, hardware, Linux, IoT,...
 
 After two years of work experience in Business Intelligence within the [Fleury Michon](https://www.fleurymichon.fr/) group, I decided to take charge of my professional project and direct it towards web development, my first passion.  
-I am actually working in [Pepperbay](https://www.pepperbay.fr/), a web development agency, after a work-study program accomplished in this company.
+I am currently working in [Pepperbay](https://www.pepperbay.fr/), a web development agency, after a work-study program accomplished in this company.
 
 ## Professional experience
 
