feat: change language to french

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -3,11 +3,11 @@ import SEO from '../components/SEO'
 import styled from '@emotion/react'
 import { css } from '@emotion/react'
 
-<SEO title="Resume" />
+<SEO title="Curriculum Vitae" />
 
 <article>
 
-<h1>Resume</h1>
+<h1>Curriculum Vitae</h1>
 
 <Avatar
   css={css`
@@ -16,67 +16,85 @@ import { css } from '@emotion/react'
   `}
 />
 
-I am 25 years old and I am passionate about computing in the broad sense:
-dev, web technos, hardware, Linux, IoT,...
+J'ai 26 ans et je suis passionné d'informatique au sens large : développement, technologies web, hardware, Linux, IoT, ...
 
-After two years of work experience in Business Intelligence within the [Fleury Michon](https://www.fleurymichon.fr/) group, I decided to take charge of my professional project and direct it towards web development, my first passion.  
-I am currently working in [Pepperbay](https://www.pepperbay.fr/), a web development agency, after a work-study program accomplished in this company.
+Les sujets qui me passionnent actuellement sont la conception d'interfaces respectant les problématiques d'accessibilité, l'optimisation des rendus côté serveur (SSR) ainsi que la création de systèmes de design.
 
-## Professional experience
+Je travaille actuellement à [KNP Labs](https://knplabs.com/fr), une agence de développement web, où je suis développeur web. J'interviens sur les problématiques d'interfaces (front-end).
 
-**Pepperbay - Web Developer**: 2019 - 2021
+## Expériences professionnelles
 
-In charge of redesigning the interface of an international trading application.  
-Choice of technologies (libraries & frameworks).
+### [KNP Labs](https://knplabs.com/fr) — Développeur web : 2021 – 2022
 
-Technical Stack:
+Mission pour la [MAIF](https://www.maif.fr/) :
 
-- [React](https://reactjs.org/)
-- State management: [Redux](https://redux.js.org/)
-- Effects management: [Redux-Saga](https://redux-saga.js.org/)
-- Graphic components management: [Storybook](https://storybook.js.org/)
-- Internationalization management: ~~[i18next](https://www.i18next.com/)~~ Lighter custom solution
-- Others: [Webpack](https://webpack.js.org/), [Ramda](https://ramdajs.com/), [Husky](https://github.com/typicode/husky), [ESLint](https://eslint.org/), [Prettier](https://prettier.io/)
+- Migration d'un progiciel développé en [Angular](https://angular.io/) vers [React](https://reactjs.org/) avec refonte du design
+- Développement de composants respectant les bonnes pratiques du [WCAG](https://www.w3.org/TR/WCAG21/)
+- Estimation et découpage des différentes tâches
+- Accompagnement et formation de junior
 
-**Pepperbay - Work-Study Program**: 2018 - 2019
+Interventions sur d'autres projets clients pour des revues codes.
 
-Development of an international trading software, a monolithic application in Symfony 3.4 / Twig.
-The challenge of the project is its complete redesign, but without interruption in the development of new features:
+### [Pepperbay](https://pepperbay.fr/) — Développeur web : 2019 – 2021
 
-- Back: API Platform (Symfony 4)
-- Front: React
+En charge de la refonte de l'interface d'une application de négoce international.  
+Choix des technologies (frameworks & bibliothèques).
 
-## Skills and competencies
+Stack technique :
 
-- Languages: Javascript, Python, PHP, ...
-- CI: Gitlab CI, GitHub Actions, Jenkins, ...
-- System: NGINX, Docker, Makefile, Kubernetes, Linux, ...
-- Methodology: SCRUM
+- Bibliothèque d'interface : [React](https://reactjs.org/)
+- Gestion du state global : [Redux](https://redux.js.org/)
+- Gestion des effets : [Redux-Saga](https://redux-saga.js.org/)
+- Gestion des composants graphiques : [Storybook](https://storybook.js.org/)
+- Gestion de l'internationalisation : ~~[i18next](https://www.i18next.com/)~~ Solution custom plus légère
+- Divers : [Webpack](https://webpack.js.org/), [Ramda](https://ramdajs.com/), [Husky](https://github.com/typicode/husky), [ESLint](https://eslint.org/), [Prettier](https://prettier.io/)
 
-## School course
+### [Pepperbay](https://pepperbay.fr/) — Contrat de professionnalisation : 2018 – 2019
 
-**[EPSI](http://www.epsi.fr/) - Master of Science in Computer Engineering**: 2017 - 2019  
-Training leading to a level 1 RNCP qualification (Bac+5) "Expert in Computer Science and Information Systems", and carried out in an apprenticeship in the [Fleury Michon](https://www.fleurymichon.fr/) company and [Pepperbay](https://www.pepperbay.fr/).
+Développement d'un logiciel de négoce international, une application monolithique en Symfony 3.4 / Twig.
+L'enjeu du projet est sa refonte complète, mais sans interruption dans le développement de nouvelles fonctionnalités :
 
-**[IIA Laval](http://iia-laval.fr/) - Bachelor of Science in Computer Science**: 2016 - 2017  
-Training in partnership with the CNAM, carried out under a professionalization contract with [Fleury Michon](https://www.fleurymichon.fr/).
+- Back : API Platform (Symfony 4)
+- Front : ReactJS
 
-**[IUT de Nantes](https://iutnantes.univ-nantes.fr/formations/dut-bac-2-/dut-informatique-2019469.kjsp) - Computer Science Associate’s Degree**: 2014 - 2016  
-Journey through computer science basics (design, project management, web, database,...).
+## Compétences
 
-## Associative
+- Langages : Javascript, Python, PHP, ...
+- CI : Gitlab CI, GitHub Actions, Jenkins, ...
+- Système : NGINX, Docker, Makefile, Kubernetes, Linux, ...
+- Méthodologie : SCRUM
 
-**Stage Manager - Art'Culmine Association**: 2015 - ...  
-Stage design and lighting.  
-Technical design of sound, video and light.
+## Parcours scolaire
 
-**Vice-President - BDE Astro'Nantes**: 2015 - 2016  
-Organization of events for a student association.
+### [EPSI](http://www.epsi.fr/) — Ingénierie Informatique : 2017 – 2019
 
-**Actor and horse rider - Cinéscénie at Puy du Fou**: 2007 - ...  
-Participation in a major live show telling the history of the region.
+Formation sanctionnée par un titre RNCP de niveau I (Bac+5) « Expert en Informatique et Système d'Information », et réalisée en alternance dans l'entreprise [Fleury Michon](https://www.fleurymichon.fr/) et [Pepperbay](https://www.pepperbay.fr/).
 
-**Video Jockey - Asia Project Association**: 2013  
-Live video design and mix to illustrate DJ mixes.
+### [IIA Laval](http://iia-laval.fr/) — Licence Informatique Générale : 2016 – 2017
+
+Formation en partenariat avec le CNAM, réalisée en contrat de professionnalisation dans l'entreprise [Fleury Michon](https://www.fleurymichon.fr/).
+
+### [IUT de Nantes](https://iutnantes.univ-nantes.fr/formations/dut-bac-2-/dut-informatique-2019469.kjsp) — DUT Informatique : 2014 – 2016
+
+Parcours des bases de l'informatique (conception, pilotage de projet, web, base de données, ...).
+
+## Associatif
+
+### Association Art'Culmine — Régisseur : 2015 – ...
+
+Conception de scène et mise en lumière.  
+Conception technique son, vidéo et lumière.
+
+### BDE Astro'Nantes — Vice-Président : 2015 – 2016
+
+Organisation d'événements pour une association étudiante.
+
+### Cinéscénie du Puy du Fou — Acteur et cavalier : 2007 – 2021
+
+Participation à un grand spectacle vivant racontant l'histoire de la région.
+
+### Association Asia Project — Vidéo Jockey : 2013
+
+Conception et mix vidéo en direct pour illustrer les mixs de DJ.
 
 </article>
