refactor: use better words

--- a/src/posts/yousign/yousignLandingAudit.mdx
+++ b/src/posts/yousign/yousignLandingAudit.mdx
@@ -22,7 +22,7 @@ import screenReaderIssueWebm from './videos/screen-read-issue.webm'
 
 Dans le cadre de la recherche d'une nouvelle entreprise à rejoindre, j'ai réalisé un audit de la _landing page_ de l'application web développée par Yousign. Elle permet aux clients de gérer les différents documents que leurs partenaires devront signer.
 
-Ce document ne vise pas à critiquer le travail réalisé par les équipes. Il a pour but d'analyser la mise en place des bonnes pratiques selon des éléments sourcés, afin de construire et améliorer ensemble un web plus inclusif.
+Cet article ne vise pas à critiquer le travail réalisé par les équipes. Il a pour but d'analyser la mise en place des bonnes pratiques selon des éléments sourcés, afin de construire et améliorer ensemble un web plus inclusif.
 
 Yousign est une entreprise développant une application qui permet la signature de document en ligne et de manière sécurisée. L'entreprise a réalisé en 2021 une levée de fond de 30 millions d’euros, et a pour objectif de devenir le leader européen de la signature électronique.
 
@@ -257,13 +257,13 @@ Toutes les tailles de polices de l'application sont définies en pixel. Heureuse
 ## Commentaire
 
 Selon la [loi « handicap » de 2005](https://www.legifrance.gouv.fr/loda/id/JORFTEXT000000809647/) (et les [nombreux décrets](https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000038811937) qui l'ont suivie), les applications mobiles et progiciels doivent attester d'un niveau d'accessibilité satisfaisant à compter du 23 juin 2021. Cette mesure s'applique également aux entreprises privées, mais seulement celles réalisant un chiffre d'affaire supérieur à 250 millions d'euros, ce qui n'est pas le cas de Yousign.  
-Toutefois, Yousign est amené à mettre son application de signature en ligne à la portée de tous, et se doit d'être actifs sur ces sujets. Le respect des différents critères du <abbr title="Référentiel général d'amélioration de l'accessibilité">RGAA</abbr> peut également mener à l'ouverture de nouveaux marchés ayant ce prérequis (marchés publics, <abbr title="Organisation non gouvernementale">ONG</abbr>, ...)
+Toutefois, Yousign est amené à mettre son application de signature en ligne à la portée de tous, et se doit d'être actif sur ces sujets. Le respect des différents critères du <abbr title="Référentiel général d'amélioration de l'accessibilité">RGAA</abbr> peut également mener à l'ouverture de nouveaux marchés ayant ce prérequis (marchés publics, <abbr title="Organisation non gouvernementale">ONG</abbr>, ...)
 
 L'accessibilité est l'affaire de tous (<abbr title="Product Owner">PO</abbr>, designer·euse, développeur·euse, ...), et doit être pensée tout au long du processus de conception et de réalisation de l'application. L'inclusion de tous et notamment des personnes en situation de handicap, est une valeur importante à mes yeux que j'essaie de défendre au quotidien. Ce mini-audit révèle que Yousign réalise déjà des efforts dans ce sens, mais il est possible d'aller plus loin et je serais ravi d'y contribuer.
 
 ## Bonus
 
-En réalisant ce mini-audit, j'ai noté l'utilisation d'éléments que j'ai apprécié :
+En réalisant ce mini-audit, j'ai noté la présence d'éléments que j'ai apprécié :
 
 - Utilisation de [_React Portals_](https://reactjs.org/docs/portals.html), permettant d'utiliser l'ordre de rendu naturel du DOM pour gérer les empilements des éléments graphiques
 - Utilisation d'une bibliothèque de composants _headless_ ([Radix UI](https://www.radix-ui.com/)), permettant une meilleure accessibilité sur les composants customs
