--- a/src/posts/yousign/yousignLandingAudit.mdx
+++ b/src/posts/yousign/yousignLandingAudit.mdx
@@ -257,9 +257,9 @@ Toutes les tailles de polices de l'application sont définies en pixel. Heureuse
 ## Commentaire
 
 Selon la [loi « handicap » de 2005](https://www.legifrance.gouv.fr/loda/id/JORFTEXT000000809647/) (et les [nombreux décrets](https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000038811937) qui l'ont suivie), les applications mobiles et progiciels doivent attester d'un niveau d'accessibilité satisfaisant à compter du 23 juin 2021. Cette mesure s'applique également aux entreprises privées, mais seulement celles réalisant un chiffre d'affaire supérieur à 250 millions d'euros, ce qui n'est pas le cas de Yousign.  
-Toutefois, Yousign est amené à mettre son application de signature en ligne à la portée de tous, et se doit d'être actif sur ces sujets. Le respect des différents critères du <abbr title="Référentiel général d'amélioration de l'accessibilité">RGAA</abbr> peut également mener à l'ouverture de nouveaux marchés ayant ce prérequis (marchés publics, <abbr title="Organisation non gouvernementale">ONG</abbr>, ...)
+Toutefois, Yousign est amené à mettre son application de signature en ligne à la portée de tout le monde, et se doit d'être actif sur ces sujets. Le respect des différents critères du <abbr title="Référentiel général d'amélioration de l'accessibilité">RGAA</abbr> peut également mener à l'ouverture de nouveaux marchés ayant ce prérequis (marchés publics, <abbr title="Organisation non gouvernementale">ONG</abbr>, ...)
 
-L'accessibilité est l'affaire de tous (<abbr title="Product Owner">PO</abbr>, designer·euse, développeur·euse, ...), et doit être pensée tout au long du processus de conception et de réalisation de l'application. L'inclusion de tous et notamment des personnes en situation de handicap, est une valeur importante à mes yeux que j'essaie de défendre au quotidien. Ce mini-audit révèle que Yousign réalise déjà des efforts dans ce sens, mais il est possible d'aller plus loin et je serais ravi d'y contribuer.
+L'accessibilité est l'affaire de tous (<abbr title="Product Owner">PO</abbr>, designer·euse, développeur·euse, ...), et doit être pensée tout au long du processus de conception et de réalisation de l'application. L'inclusion de l'ensemble des utilisateurs et notamment des personnes en situation de handicap, est une valeur importante à mes yeux que j'essaie de défendre au quotidien. Ce mini-audit révèle que Yousign réalise déjà des efforts dans ce sens, mais il est possible d'aller plus loin et je serais ravi d'y contribuer.
 
 ## Bonus
 
