fix: nbsp on inline tag

--- a/src/posts/yousign/yousignLandingAudit.mdx
+++ b/src/posts/yousign/yousignLandingAudit.mdx
@@ -186,19 +186,19 @@ La sémantique HTML est pauvre dans la conception de cette fenêtre modale. Voic
   <tbody>
     <tr>
       <td>
-        <code>&lt;div /></code>
+        <code>&lt;div&nbsp;/></code>
       </td>
       <td>11</td>
     </tr>
     <tr>
       <td>
-        <code>&lt;a /></code>
+        <code>&lt;a&nbsp;/></code>
       </td>
       <td>1</td>
     </tr>
     <tr>
       <td>
-        <code>&lt;button /></code>
+        <code>&lt;button&nbsp;/></code>
       </td>
       <td>1</td>
     </tr>
