feat: add yousign in CV

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -20,9 +20,14 @@ J'ai 26 ans et je suis passionné d'informatique au sens large : développement,
 
 Les sujets qui me passionnent actuellement sont la conception d'interfaces respectant les problématiques d'accessibilité, l'optimisation des rendus côté serveur (SSR) ainsi que la création de systèmes de design.
 
-Je travaille actuellement à [KNP Labs](https://knplabs.com/fr), une agence de développement web, où je suis développeur web. J'interviens sur les problématiques d'interfaces (front-end).
+Je travaille actuellement à [Yousign](https://yousign.com/), un éditeur de logiciel français qui commercialise un <abbr title="Software as a service">SaaS</abbr> de signature électronique, où je suis développeur front-end.
 
 ## Expériences professionnelles
+
+### [Yousign](https://yousign.com/) — Développeur front-end : 2022 – ...
+
+- Développement de nouvelles fonctionnalités
+- Participation à l'amélioration de l'accessibilité pour les utilisateurs externes (processus de signature)
 
 ### [KNP Labs](https://knplabs.com/fr) — Développeur web : 2021 – 2022
 
